--- a/content/posts/2019-04-20.md
+++ b/content/posts/2019-04-20.md
@@ -1,11 +1,12 @@
 ---
 title: "The Sign of Jonah"
-output:
-  html_document:
-    df_print: paged
-  word_document: default
+featured_image: "/images/Shacks.jpeg"
 date: '2019-04-19'
 ---
+
+I got the idea for this message from my friend Tom Shackles, who was taken away from us in a whirlwind.
+
+![Tom Shackles](/images/Shacks.jpeg "Tom Shackles")
 
 Thank you all for being here. Today I'd like to talk about the Easter holidays. I'm not going to talk about these Easter holidays but about the original Easter holy days, three days that changed everything.
 
