--- a/content/posts/2020-11-29.md
+++ b/content/posts/2020-11-29.md
@@ -1,9 +1,6 @@
 ---
 title: "For those who trust him"
-output:
-  html_document:
-    df_print: paged
-  word_document: default
+featured_image: "/images/Damascus_road.jpg"
 date: '2020-11-29'
 ---
 
