--- a/content/posts/2021-01-31.md
+++ b/content/posts/2021-01-31.md
@@ -1,9 +1,6 @@
 ---
 title: "What's this?"
-output:
-  html_document:
-    df_print: paged
-  word_document: default
+featured_image: "/images/Capernaum.jpg"
 date: '2021-01-31'
 ---
 
