--- a/content/posts/2022-05-02.md
+++ b/content/posts/2022-05-02.md
@@ -1,8 +1,6 @@
 ---
 title: "You give them something to eat"
-output:
-  html_document:
-    df_print: paged
+featured_image: "/images/feeding_5000.jpg"
 date: '2022-05-02'
 bibliography: messages.json
 ---
