--- a/content/posts/2022-06-23.md
+++ b/content/posts/2022-06-23.md
@@ -1,7 +1,6 @@
 ---
 title: "Athanasius against the world"
-output:
-  html_document
+featured_image: "/images/POxy3929.jpg"
 date: '2022-06-09'
 ---
 
