--- a/content/posts/2022-01-30.md
+++ b/content/posts/2022-01-30.md
@@ -1,9 +1,6 @@
 ---
 title: "The weeping prophet"
-output:
-  word_document: default
-  html_document:
-    df_print: paged
+featured_image: "/images/Jeremiah.jpeg"
 date: '2022-01-30'
 ---
 
