--- a/content/posts/2022-10-13.md
+++ b/content/posts/2022-10-13.md
@@ -1,7 +1,6 @@
 ---
 title: "Life after life"
-output:
-  html_document
+featured_image: "/images/NASA-galaxies.png"
 date: '2022-10-06'
 ---
 
@@ -19,7 +18,7 @@ Maybe we can say that life has something to do with communication and change whe
 
 # Ultimate fate of the physical universe
 
-It seems that things are going to end badly for the physical universe. The Wikipedia article on the [Chronology of the universe](https://en.wikipedia.org/wiki/Chronology_of_the_universe) says that the following scenarios have been proposed for the ultimate fate of the universe:
+It seems that things are going to end badly for the physical universe (see Wikipedia, [Chronology of the universe](https://en.wikipedia.org/wiki/Chronology_of_the_universe):
 
 Heat death
 : As expansion continues, the universe becomes larger, colder, and more dilute; in time, all structures eventually decompose to subatomic particles and photons.
