--- a/content/posts/2022-10-30.md
+++ b/content/posts/2022-10-30.md
@@ -34,29 +34,74 @@ You know something is wrong when God calls you *rulers of Sodom* and *people of 
 	
 > And the Lord said, “The outcry of Sodom and Gomorrah is indeed great, and their sin is exceedingly grave. “I will go down now and see whether they have done entirely as the outcry, which has come to Me indicates; and if not, I will know.”
 
-There are threads here that recur throughout the Bible:
+We discover in this part of Genesis that God chooses people to follow his way. We also find that God hears the outcry caused by sin but checks things out for himself.
 
-* God chooses people
-* God's people follow his way when they do what is right
-* God hears the outcry
-* God checks the facts.
-
-God's way -- the right way -- is spelled out in Isaiah:
+Speaking of God's way, Isaiah spells it out for us:
 
 > cease to do evil, learn to do good; seek justice, rescue the oppressed, defend the orphan, plead for the widow.
 
-I suppose that is what Jesus meant when he said *Repent, for the Kingdom of God is at hand.* Jesus calls people to change their way, to turn from darkness to light, to let the sun of righteousness rise upon them with healing in his wings.
+When Jesus began to preach he said, *Repent, for the Kingdom of God is at hand.* God's desire is for people to change their way, to turn from darkness to light, to let the sun of righteousness rise upon them with healing in his wings.
 
-This brings us to Zacchaeus of Jericho, whose story is a Sunday School favourite. Children know what it's like to miss out because the big people are in front. I hear that Michael Lush from Scripture Union climbed onto the church piano or anything else handy when telling this story. It's all about a short man who climbs a tree to see Jesus, isn't it? Maybe not. Let's take a closer look.
+This brings us to Zacchaeus of Jericho, whose story is a Sunday School favourite. Children know what it's like to miss out because the big people are in front. I hear that Michael Lush from Scripture Union climbed onto the church piano or anything else handy when telling this story.
 
-Luke tells us this about Zacchaeus:
+What is this story about? Isn't it just about a short man who climbs a tree to see Jesus? Maybe there's more to it than that. You can look at the story of Zacchaeus as the story of a person taking steps along God's way. Luke introduces Zacchaeus by saying, 
 
-> he was a chief tax collector and was rich
+> he was one of the senior tax collectors and a wealthy man [Luke 19.2 Jerusalem Bible]
 
-Zacchaeus is a success. He has made it. But he knows what it's like to be taunted. People probably made jokes about him and called him *shorty* or something like that. No doubt the people around Jericho didn't like him. He would have been ostracized because people thought he was bad, collaborating with the occupying forces to extract their wealth. Despite his wealth, not all was well in the House of Zacchaeus.
+Zacchaeus is a success. He has made it. But he also knows what it's like to get the cold shoulder. People probably made jokes about him and called him *shorty* or something like that. He would have been ostracized because people thought he was bad, collaborating with the occupying forces to get their assets. Despite his apparent success, not all was well in the House of Zacchaeus.
+
+The next thing Luke tells us about Zacchaeus is that,
+
+> He was anxious to see what kind of man Jesus was
+
+It is a mystery how the quest for Jesus starts. What motivates someone to start searching? Does the initiative come from the person or from God? Whatever the answer to that deep mystery is, the next step on the way for Zacchaeus was trying to see who Jesus is. When Jesus got near he looked up and said,
+
+> Zacchaeus, come down. Hurry, because I must stay at your house today.
+
+You might have heard of [chiastic structure](https://en.wikipedia.org/wiki/Chiastic_structure) before, whereby the ancients would arrange things so that the first and last parts correspond, as do the second and second last parts, and so on. The structure works as a way of reinforcing the message, making it easier to remember. Another key function of the structure is to emphasize the central point, and here is the central point of Luke's account of Zacchaeus -- it's where Zacchaeus meets Jesus face to face.
+
+The New Testament tells us that Jesus is more than a man. John's Gospel says,
+
+> In the beginning was the Word: the Word was with God, and the Word was God.
+
+[John 1.1 JB]
+
+Paul's Letter to the Colossians says,
+
+> He is the image of the unseen God and the first-born of all creation, for in him were created all things in heaven and on earth: everything visible and everything invisible.
+
+[Col 1.15-16 JB]
+
+Whoever wrote Hebrews (Silvanus?) says,
+
+> He is the radiant light of God's glory and the perfect copy of his nature, sustaining the universe by his powerful command.
+
+[Heb 1.3 JB]
+
+Basically, if you've seen Jesus then you've seen God face to face. When this happens, something happens. You are still you, but now you are the you who has encountered the Living God. For Moses, it was the burning bush. For Joshua, it was seeing the Commander of the Lord's armies outside Jericho. For Samuel, it was a voice in the night. For Zacchaeus, it was looking down at a man from a tree.
+
+Luke continues on,
+
+> And he hurried down and welcomed him joyfully.
+
+Zacchaeus could have made excuses, maybe for fear of repercussions from the occupying forces or the religious authorities; but no, he joyfully received Jesus into his home and into his life. Zacchaeus was happy, Jesus was happy, but the mood changed for everyone else:
+
+> They all complained when they saw what was happening. 'He has gone to stay at a sinner's house' they said.
+
+Hey, they must be Australians! We are all quick to judge. However, God is happy to come into our house even if no one else wants to. No matter who you are, God is happy to meet you where you are. A judgment has happened here. Zacchaeus joyfully receives Jesus while the grumbling mob shuts itself out.
+
+What comes next indicates that Zacchaeus wasn't too concerned about the crowd. Instead, his focus was fixed on Jesus:
+
+> But Zacchaeus stood his ground and said to the Lord, 'Look, sir, I am going to give half of my property to the poor, and if I have cheated anybody I will pay him back four times the amount.'
+
+The encounter with Jesus has somehow transformed Zacchaeus. God came to town and took a look for himself. He saw Zacchaeus, who was trying to see him. Judgment was given in favor of the man who everyone else regarded as a sinner:
+
+> And Jesus said to him, 'Today salvation has come to this house, because this man too is a son of Abraham; for the Son of Man has come to seek out and save what was lost.'
+
+Amen.
 
 # Acknowledgments
 
 The image of *Zacchaeus receives Jesus*, taken in the Church of the Good Shepherd, Jericho, is courtesy of Tango7174: Own work, CC BY-SA 4.0, <https://commons.wikimedia.org/w/index.php?curid=25144248>.
 
-Bible readings are from the [New American Standard Bible](https://www.crosswire.org/study/fulllibrary.jsp?show=NASB).
+Readings are from the [New American Standard Bible](https://www.crosswire.org/study/fulllibrary.jsp?show=NASB) and [Jerusalem Bible](https://en.wikipedia.org/wiki/Jerusalem_Bible).
