--- a/content/posts/2022-10-30.md
+++ b/content/posts/2022-10-30.md
@@ -78,7 +78,7 @@ Whoever wrote Hebrews (Silvanus?) says,
 
 [Heb 1.3 JB]
 
-Basically, if you've seen Jesus then you've seen God face to face. When this happens, something happens. You are still you, but now you are the you who has encountered the Living God. For Moses, it was the burning bush. For Joshua, it was seeing the Commander of the Lord's armies outside Jericho. For Samuel, it was a voice in the night. For Zacchaeus, it was looking down at a man from a tree.
+Basically, if you've seen Jesus then you've seen God face to face. When this happens, something happens. You are still you, but now you are the you who has encountered the Living God. For Hagar, it was seeing the God who sees her. For Moses, it was the burning bush. For Joshua, it was meeting the Commander of the Lord's armies outside Jericho. For Samson's mother, it was speaking with the Angel of the Lord. For Samuel, it was a voice in the night. For Zacchaeus, it was looking down at a man from a tree.
 
 Luke continues on,
 
