--- a/content/posts/2023-01-29.md
+++ b/content/posts/2023-01-29.md
@@ -104,7 +104,7 @@ These verses have a beautiful symmetry. The phrases form a tapestry, building on
 
 These verses are a divine summary of the essential wisdom that Christ wants to engrave on our hearts, words to live by that evoke the highest ideals and continue to inspire us.
 
-How does one summarize the divine? I've looked at the structure, trying to find the most important part. However, my attempts have been a miserable failure. Maybe this is God's wisdom saying that all of it is important. Nevertheless, I press on in my folly. Looking at the middle is often a good place to start, and if I'm not wrong the central phrase is this: *Blessed are the merciful, for they shall have mercy shown to them.* This is indeed a major theme of what follows. The Beatitudes are a prelude to the very practical teaching that comprises the Sermon on the Mount. Jesus teaches us that true religion is all about right action. It's no good just hearing what is good, we have to put it into practice. We need to actually do something. That can mean working together, which brings up the question of how. There is good advice on this point: don't complain about the speck in your brother's eye -- take the plank out of your own eye first. Other good advice from the Jesus' Sermon is to have a good eye and not an evil eye. That is, be magnanimous, not mean-spirited. And through all the hardships you will encounter, don't worry. God saw you before you knew it. He cares for you like he cares for the birds and flowers of the field.
+How does one summarize the divine? I've looked at the structure, trying to find the most important part. However, my attempts have been a miserable failure. Maybe this is God's wisdom saying that all of it is important. Nevertheless, I press on in my folly. Looking at the middle is often a good place to start, and if I'm not wrong the central phrase is this: *Blessed are the merciful, for they shall have mercy shown to them.* This is indeed a major theme of what follows. The Beatitudes are a prelude to the very practical teaching that comprises the Sermon on the Mount. Jesus teaches us that true religion is all about right action. It's no good just hearing what is good, we have to put it into practice. We need to actually do something. That can mean working together, which brings up the question of how. There is good advice on this point: don't complain about the speck in your brother's eye -- take the plank out of your own eye first. Other good advice from Jesus' Sermon is to have a good eye and not an evil eye. That is, be magnanimous, not mean-spirited. And through all the hardships you will encounter, don't worry. God saw you before you knew it. He cares for you like he cares for the birds and flowers of the field.
 
 Friends, I can tell you to do what Jesus says, but who am I to talk when I am so bad at doing it myself? Life has a way of wearing us down. We can start off enthusiastic but end up jaded. What can I say? Let joy be your guide. Find the place where God is even though you didn't know it. Hear Him and rely on Him. Don't waste your days thinking about what someone else should be doing -- redeem the time and think about what you can do then have a go. Know that God will be with you from the first step you take and will remain with you wherever the journey leads.
 
