--- a/content/posts/2023-02-09.md
+++ b/content/posts/2023-02-09.md
@@ -10,7 +10,7 @@ In December 1968, three astronauts were orbiting the moon when they saw somethin
 
 # The beginning of the Bible
 
-Here is the beginning of the Bible, [Genesis chapter one](https://www.crosswire.org/study/parallelstudy.jsp?del=all&add=KJV&add=WLC&add=NASB&add=LXX):
+Here is an English translation of the beginning of the Bible. (The original text is written in Hebrew.)
 
 > In the beginning God created the heavens and the earth.
 	
@@ -58,7 +58,6 @@ Here is the beginning of the Bible, [Genesis chapter one](https://www.crosswire.
 	
 > And there was evening and there was morning, a fifth day.
 
-	
 > Then God said, “Let the earth produce living creatures according to their kind: livestock and crawling things and animals of the earth according to their kind”; and it was so.
 	
 > God made the animals of the earth according to their kind, and the livestock according to their kind, and everything that crawls on the ground according to its kind; and God saw that it was good.
@@ -73,27 +72,98 @@ Here is the beginning of the Bible, [Genesis chapter one](https://www.crosswire.
 	
 > and to every animal of the earth and to every bird of the sky and to everything that moves on the earth which has life, I have given every green plant for food”; and it was so.
 	
-> And God saw all that He had made, and behold, it was very good. And there was evening and there was morning, the sixth day. 
+> And God saw all that He had made, and behold, it was very good. And there was evening and there was morning, the sixth day.
+
+[Genesis, chapter 1, NASB](https://www.crosswire.org/study/parallelstudy.jsp?del=all&add=KJV&add=WLC&add=NASB&add=LXX)
 
 # Questions
 
-This text raises many questions. For example, given today's science, it has to be wrong doesn't it? It says the earth was made in six days but we know it took thousands of millions of years. (Our sun is a second generation star. First there was the big bang, then the first generation of stars which produced everything in the periodic table besides primordial hydrogen or helium, then the formation of our solar system from the remnants of first generation stars. All this took about nine thousand million years.) Isn't it wrong for the earth to be formed before the sun and moon appear? And who wrote it down, given that there were no humans when most of it happened?
+This text raises many questions. For example, given today's scientific account, Genesis has to be wrong doesn't it? It says the earth was made in six days whereas most cosmologists estimate that it took thousands of millions of years. Our sun is a second generation star. First there was the big bang, then the first generation of stars which produced everything in the periodic table besides primordial hydrogen or helium, then the formation of our solar system from the remnants of first generation stars. All this took about nine thousand million years. The earth formed about 4.5 thousand million years ago.
+
+Also, isn't it wrong to say the earth was formed before the sun and moon appeared?
+
+And who wrote it down, anyway, given that there were no humans when most of it happened?
 
 # Who wrote it down?
 
-Who do you think wrote this down? Does Genesis give us any clues? How did they find out?
+Who do you think wrote this down? Does Genesis give us any clues? How did they know what happened, given that most of the creation happened before there were any humans?
 
 # What does the text actually say?
 
 This is a favorite saying of my New Testament teacher, Dr Richard K. Moore. To understand what a text actually says we need to understand the context. We need to get into the minds of the first readers of this account and we have to know what other accounts were around. Just as today we have a common understanding of how the earth came to be, so did they. Ours is a scientific understanding but theirs is religious.
 
-It turns out that back then there were a number of accounts of how the world came to be. Each major civilization of the ancient near east had its own account involving its own gods. One example is the Babylonian epic, the *Enuma Elish*, which has a number of common elements with the Genesis account, but also significant differences. According to the Wikipedia article on the [Enuma Elish](https://en.wikipedia.org/wiki/En%C5%ABma_Eli%C5%A1),
+It turns out that back then there were a number of accounts of how the world came to be. Each major civilization of the ancient near east had its own story involving its own gods. The Egyptians had a number of stories and some of their [common elements](https://en.wikipedia.org/wiki/Ancient_Egyptian_creation_myths#Common_elements) have similarities to the Hebrew account:
+
+> The different myths have some elements in common. They all held that the world had arisen out of the lifeless waters of chaos, called Nu. They also included a pyramid-shaped mound, called the benben, which was the first thing to emerge from the waters.
+
+Another example is the *Enuma Elish*, which is the Babylonian creation epic. It also has similarities to the Genesis account, but also significant differences. According to the Wikipedia article on the [Enuma Elish](https://en.wikipedia.org/wiki/En%C5%ABma_Eli%C5%A1),
 
 > Overarching similarities include: reference to a watery chaos before creation; a separation of the chaos into heaven and earth; different types of waters and their separation; as well as the numerical similarity between the seven tablets of the epic and the seven days of creation. However, another analysis (Heidel 1951) notes many differences, including polytheism vs. monotheism, and personification of forces and qualities in the Babylonian myth vs. imperative creation by God in the biblical stories; permanence of matter vs. creation out of nothing; and the lack of any real parallel for Marduk's long battles with monsters. He also notes some broad commonalities of both texts with other religions, such as a watery chaos found in Egyptian, Phoenician, and Vedic works; and that both texts were written in languages with a common Semitic root. Regarding the creation of man, there are similarities in the use of dust or clay, but man's purpose is inverted in the two texts: in the Enūma Eliš man is created as a servant of gods, whereas in Genesis man is given more agency. Nevertheless in both, the dust is infused with "godhood", either through a god's blood in the Enūma Eliš, or by being made in God's image in Genesis. As to the seven tablets and seven days of each system, the numbered itineraries in general do not closely match, but there are some commonalities in order of the creation events: first darkness, then light, the firmament, dry land, and finally man, followed by a period of rest.
 
-Common elements of the [Egyptian creation stories](https://en.wikipedia.org/wiki/Ancient_Egyptian_creation_myths#Common_elements) also have points of contact with the Genesis account:
+Much of the meaning contained in the Hebrew account is due to its differences from the creation epics of the surrounding cultures. The Hebrew account does not explain the origins of an abundance of gods. There are no violent battles between gods. There is no attempt to explain the origins of the Creator, though the text gives some of his qualities:
 
-> The different myths have some elements in common. They all held that the world had arisen out of the lifeless waters of chaos, called Nu. They also included a pyramid-shaped mound, called the benben, which was the first thing to emerge from the waters.
+* He already exists.
+* There is a hovering Spirit (or wind, or breath, or cool)
+* He has powerful speech (when God speaks, it happens)
+* He knows what is good.
+
+The Creator has relationship as an internal quality (*Let Us make mankind in Our image, according to Our likeness*). The end point of the creation is humanity -- made in the Creator's image. *Let Us make mankind in Our image, according to Our likeness*. One important aspect of humanity is our ability to communicate and relate to others.
+
+# Does it match up with what science says?
+
+Although it's somewhat crazy to try to align continuously changing scientific understanding with an ancient religious text, here's my amateur attempt to line up parts of the Genesis account of creation with scientific accounts:
+
+*the earth was a formless and desolate emptiness, and darkness was over the surface of the deep*
+
+: [A protoplanetary disk](https://en.wikipedia.org/wiki/Protoplanetary_disk)?
+
+*Then God said, “Let there be light”*
+
+: The sun's fusion reaction lit up? The protoplanetary disk cleared to the point where light from the primordial sun broke through to the primordial earth?
+
+*Then God said, “Let there be an expanse in the midst of the waters, and let it separate the waters from the waters.”*
+
+: The atmosphere clears as water condenses into seas below and mists above?
+
+*Then God said, “Let the waters below the heavens be gathered into one place, and let the dry land appear”*
+
+: What it says.
+
+*Then God said, “Let the earth sprout vegetation, plants yielding seed, and fruit trees on the earth bearing fruit according to their kind with seed in them”*
+
+: What it says, with all of the mind-melting complexity of the [first living things](https://en.wikipedia.org/wiki/Earliest_known_life_forms) and the advent of photosynthesis.
+
+*Let there be lights in the expanse of the heavens to separate the day from the night.*
+
+: The mists above separate into clouds and clear sky so you can see the sun and moon from the earth? (I've been reading Frank Worseley's account of *Shackleton's Boat Journey.* Days elapsed between sightings of the sun necessary to fix the boat's position in the perilous journey from Elephant Island and South Georgia.)
+
+*Then God said, “Let the waters teem with swarms of living creatures, and let birds fly above the earth in the open expanse of the heavens.”*
+
+: What it says, though science says birds came after land creatures.
+
+*Let the earth produce living creatures... and mankind*
+
+: What it says. Science says birds came after land creatures but before humans.
+
+# Poetic
+
+We know that Genesis chapter one is written in Hebrew, but do we know anything else about it? Is it written in a particular style? How would you describe it?
+
+Without a doubt, Genesis chapter one is poetic. It has a cadence. Creation happens as a series of separations. Set phrases are repeated, as in a song: *then God said, let there be*, *and it was so*, *and God saw that it was good*, *And there was evening and there was morning*.
+
+The account also has a particular correspondence across days:
+
+Day | Summary | Day | Summary
+:------:|:------------------------|:------:|:------------------------
+1 | light | 4 | lights
+2 | waters below and mists above | 5 | fish and birds
+3 | dry land | 6 | animals and humans
+
+Given its poetic nature, perhaps it is unwise to ignore the Genesis account of creation because it does not perfectly align with current scientific sensibilities.
+
+# A question
+
+To finish off, here is a question. What do you think being made according to God's likeness means?
 
 # Acknowledgments
 
