Tweak Beginning (pt. 1)

--- a/content/posts/2023-02-09.md
+++ b/content/posts/2023-02-09.md
@@ -90,7 +90,7 @@ Who do you think wrote this down? Does Genesis give us any clues? How did they k
 
 # What does the text actually say?
 
-This is a favorite saying of my New Testament teacher, Dr Richard K. Moore. To understand what a text actually says we need to understand the context. We need to get into the minds of the first readers of this account and we have to know what other accounts were around. Just as today we have a common understanding of how the earth came to be, so did they. Ours is a scientific understanding but theirs is religious.
+This is a favorite saying of my New Testament teacher, Dr Richard K. Moore. To understand what a text actually says we need to understand the context. We need to get into the minds of the first readers of this account and we have to know what other accounts were around. Just as today we have a common understanding of how the earth came to be, so did they in their day. Ours is a scientific understanding but theirs is religious.
 
 It turns out that back then there were a number of accounts of how the world came to be. Each major civilization of the ancient near east had its own story involving its own gods. The Egyptians had a number of stories and some of their [common elements](https://en.wikipedia.org/wiki/Ancient_Egyptian_creation_myths#Common_elements) have similarities to the Hebrew account:
 
