Tweak Beginning (pt. 1)

--- a/content/posts/2023-02-09.md
+++ b/content/posts/2023-02-09.md
@@ -96,7 +96,7 @@ It turns out that back then there were a number of accounts of how the world cam
 
 > The different myths have some elements in common. They all held that the world had arisen out of the lifeless waters of chaos, called Nu. They also included a pyramid-shaped mound, called the benben, which was the first thing to emerge from the waters.
 
-Another example is the *Enuma Elish*, which is the Babylonian creation epic. It also has similarities to the Genesis account, but also significant differences. According to the Wikipedia article on the [Enuma Elish](https://en.wikipedia.org/wiki/En%C5%ABma_Eli%C5%A1),
+Another example is the *Enuma Elish*, which is the Babylonian creation epic. It also has similarities to the Genesis account, but significant differences as well. According to the Wikipedia article on the [Enuma Elish](https://en.wikipedia.org/wiki/En%C5%ABma_Eli%C5%A1),
 
 > Overarching similarities include: reference to a watery chaos before creation; a separation of the chaos into heaven and earth; different types of waters and their separation; as well as the numerical similarity between the seven tablets of the epic and the seven days of creation. However, another analysis (Heidel 1951) notes many differences, including polytheism vs. monotheism, and personification of forces and qualities in the Babylonian myth vs. imperative creation by God in the biblical stories; permanence of matter vs. creation out of nothing; and the lack of any real parallel for Marduk's long battles with monsters. He also notes some broad commonalities of both texts with other religions, such as a watery chaos found in Egyptian, Phoenician, and Vedic works; and that both texts were written in languages with a common Semitic root. Regarding the creation of man, there are similarities in the use of dust or clay, but man's purpose is inverted in the two texts: in the Enūma Eliš man is created as a servant of gods, whereas in Genesis man is given more agency. Nevertheless in both, the dust is infused with "godhood", either through a god's blood in the Enūma Eliš, or by being made in God's image in Genesis. As to the seven tablets and seven days of each system, the numbered itineraries in general do not closely match, but there are some commonalities in order of the creation events: first darkness, then light, the firmament, dry land, and finally man, followed by a period of rest.
 
@@ -135,7 +135,7 @@ Although it's somewhat crazy to try to align continuously changing scientific un
 
 *Let there be lights in the expanse of the heavens to separate the day from the night.*
 
-: The mists above separate into clouds and clear sky so you can see the sun and moon from the earth? (I've been reading Frank Worseley's account of *Shackleton's Boat Journey.* Days elapsed between sightings of the sun necessary to fix the boat's position in the perilous journey from Elephant Island and South Georgia.)
+: The mists above separate into clouds and clear sky so you can see the sun and moon from the earth? (I've been reading Frank Worseley's account of *Shackleton's Boat Journey.* Days elapsed between sightings of the sun necessary to fix the boat's position during their perilous journey from Elephant Island to South Georgia.)
 
 *Then God said, “Let the waters teem with swarms of living creatures, and let birds fly above the earth in the open expanse of the heavens.”*
 
