tweak The Valley

--- a/content/posts/2023-04-29.md
+++ b/content/posts/2023-04-29.md
@@ -18,7 +18,7 @@ Here is the King James Version of Psalm 23:
 
 > He restoreth my soul: he leadeth me in the paths of righteousness for his name's sake.
 
-> Yea, though I walk through the valley of the shadow of death I will fear no evil: for thou art with me; thy rod and thy staff thy comfort me.
+> Yea, though I walk through the valley of the shadow of death I will fear no evil: for thou art with me; thy rod and thy staff they comfort me.
 
 > Thou preparest a table before me in the presence of my enemies: thou anointest my head with oil; my cup runneth over.
 
@@ -82,9 +82,9 @@ He restores my soul, he leads me the right way because of his good name. There's
 
 Though I walk through the valley of the shadow of death, I will fear no evil. I don't know about you, but that's where I start to lose the plot. I do fear evil when I go through a dark place or have a brush with death. Yet somehow I get through: down into the valley but then back out again.
 
-If your a regular then you have heard about *chiastic structure* before, the X-shaped arrangement that Hebrew writing often takes. The first line corresponds to the last, the second to the second last, and in the middle is what's being emphasized. Well, here is the middle -- the bottom of the valley of deadly shadows. Yet I'm not alone because God is with me, his rod and staff comfort me. I don't need to be afraid because he is there, if you can believe it, or even if you can't.
+If you're a regular then you have heard about *chiastic structure* before, the X-shaped arrangement that Hebrew writing often takes. The first line corresponds to the last, the second to the second last, and so on, and in the centre of the arrangement is what's being emphasized. Well, here is the middle -- the bottom of the valley of deadly shadows. Yet I'm not alone because God is with me, his rod and staff comfort me. We don't need to be afraid because he is there, if you can believe it, or even if you can't.
 
-What is the rod and staff? Remember Moses? Remember when he encountered God at the burning bush? Moses was about eighty when that happened. His first forty years were spent in luxury as a prince of Egypt. Then he killed someone and went on the run to the back of nowhere where he spent the next forty years looking after sheep. No doubt he thought a lot about what he could have done better.
+What is the rod and staff? Remember Moses? Remember when he encountered God at the burning bush? Moses was about eighty when that happened. His first forty years were spent in luxury as a prince of Egypt. Then he killed someone and went on the run to the back of nowhere where he spent the next forty years looking after sheep. No doubt he thought a lot about what went wrong and what he could have done better.
 
 When he went to look at the burning bush there was a voice. *Moses, you are on holy ground.* Then they have a conversation, which we can read about at [Exodus chapter 3](https://www.crosswire.org/study/parallelstudy.jsp?key=Exodus+3%3A1). Here's a summary:
 
@@ -94,7 +94,7 @@ Moses: *Who am I to go and tell Pharoah anything?*
 
 God: *I will be with you.*
 
-Moses: *What do I do when my fellow Israelites ask me, 'What's his name?'*
+Moses: *What do I do when my fellow Israelites ask me, 'What's this God's name?'*
 
 God: *I am who I am.* Tell them that *I am* sent you.
 
