tweak The Valley

--- a/content/posts/2023-04-29.md
+++ b/content/posts/2023-04-29.md
@@ -58,7 +58,11 @@ So what do we do? We have to let someone we trust translate the language for us.
 
 Our Bibles have got two parts -- the Old Testament or Hebrew Bible is written in Hebrew and the New Testament is written in Greek. Both parts have a bit of Aramaic there as well. The difference between the text in the original language and a translation is a bit like the difference between your favourite music on a really good sound system and an ordinary one. It's the same song but some things are lost in translation. All of my studies have lead me to believe that we can trust our modern English translations to be faithful renditions of the original languages, and that the texts in the original languages that have been handed down to us are faithful copies.
 
-While on the Hebrew, there's one word I'd like you to notice. It is the [Tetragrammaton](https://en.wikipedia.org/wiki/Tetragrammaton), the ineffable name of God. The Hebrews will not say this name for fear of breaking the commandment that says, *Lo tissa et shem adonai eloheicha lashave*, *Do not take God's name in vain*, *Do not make God's name a worthless sound*, or something like that. Instead of saying the name, the Hebrews will say *Adonai* (i.e. *Lord*), or *Elohim* (i.e. *God*), or *Ha Shem* (i.e. *The Name*).
+While on the Hebrew, there's one word I'd like you to notice. It is the [Tetragrammaton](https://en.wikipedia.org/wiki/Tetragrammaton), the ineffable name of God. The Hebrews will not say this name for fear of breaking the commandment that says,
+
+לֹא תִשָּׂא אֶת־ שֵֽׁם־ יְהוָה אֱלֹהֶיךָ לַשָּׁוְא
+
+*Lo tissa et shem adonai eloheicha lashave*, *Do not take God's name in vain*, *Do not make God's name a worthless sound*, or something like that. Instead of saying the name, the Hebrews will say *Adonai* (i.e. *Lord*), or *Elohim* (i.e. *God*), or *Ha Shem* (i.e. *The Name*).
 
 The first line of Psalm 23 has this name where English translations have *Lord*. If you look carefully at English translations you will notice that *Lord* is written in capitals, *LORD*. That tells you that the Tetragrammaton is written here.
 
