--- a/content/posts/2023-06-08.md
+++ b/content/posts/2023-06-08.md
@@ -7,12 +7,16 @@ bibliography: Messages.bib
 
 # Introduction
 
+> Now about that time Herod the king laid hands on some who belonged to the church, to do them harm. And he had James the brother of John executed with a sword. When he saw that it pleased the Jews, he proceeded to arrest Peter as well. (Now these were the days of Unleavened Bread.) When he had arrested him, he put him in prison, turning him over to four squads of soldiers to guard him, intending only after the Passover to bring him before the people. So Peter was kept in the prison, but prayer for him was being made to God intensely by the church. 
+
+> On the very night when Herod was about to bring him forward, Peter was sleeping between two soldiers, bound with two chains, and guards in front of the door were watching over the prison. And behold, an angel of the Lord suddenly stood near Peter, and a light shone in the cell; and he struck Peter’s side and woke him, saying, “Get up quickly.” And his chains fell off his hands. And the angel said to him, “Put on your belt and strap on your sandals.” And he did so. And he said to him, “Wrap your cloak around you and follow me.” And he went out and continued to follow, and yet he did not know that what was being done by the angel was real, but thought he was seeing a vision. Now when they had passed the first and second guard, they came to the iron gate that leads into the city, which opened for them by itself; and they went out and went along one street, and immediately the angel departed from him.
+
 > And when he realized this, he went to the house of Mary, the mother of John, who was also called Mark, where many were gathered together and were praying.
 When he knocked at the door of the gate, a slave girl named Rhoda came to answer. When she recognized Peter’s voice, because of her joy she did not open the gate, but ran in and announced that Peter was standing in front of the gate. They said to her, “You are out of your mind!” But she kept insisting that it was so. They said, “It is his angel.” But Peter continued knocking; and when they had opened the door, they saw him and were amazed. But motioning to them with his hand to be silent, he described to them how the Lord had led him out of the prison. And he said, “Report these things to James and the brothers.” Then he left and went to another place.
 
-[Acts 12.12-17 NASB](https://www.crosswire.org/study/parallelstudy.jsp?key=Acts+12%3A12#cv)
+[Acts 12.1-17 NASB](https://www.crosswire.org/study/parallelstudy.jsp?key=Acts+12%3A1#cv)
 
-Some will remember the [Bible Code](https://en.wikipedia.org/wiki/Bible_code) controversy that happened in the 1990s. That was about skipping equal numbers of letters in the Hebrew Bible and finding messages there. For example, writing down the first four letters all separated by fifty letters starting with the first *taw* in Exodus spells out *Torah*, which is *Law* in Hebrew. 
+Some will remember the fuss about the [Bible Code](https://en.wikipedia.org/wiki/Bible_code) that happened in the 1990s. It was about skipping equal numbers of letters in the Hebrew Bible and finding messages there. For example, writing down the first four letters all separated by fifty letters starting with the first *taw* in Exodus spells out *Torah*, which is *Law* in Hebrew. 
 
 ![Equidistant letter sequence in Exodus](/images/Code-Exodus-ELS.jpg)
 
