--- a/content/posts/2023-06-08.md
+++ b/content/posts/2023-06-08.md
@@ -11,8 +11,7 @@ bibliography: Messages.bib
 
 > On the very night when Herod was about to bring him forward, Peter was sleeping between two soldiers, bound with two chains, and guards in front of the door were watching over the prison. And behold, an angel of the Lord suddenly stood near Peter, and a light shone in the cell; and he struck Peter’s side and woke him, saying, “Get up quickly.” And his chains fell off his hands. And the angel said to him, “Put on your belt and strap on your sandals.” And he did so. And he said to him, “Wrap your cloak around you and follow me.” And he went out and continued to follow, and yet he did not know that what was being done by the angel was real, but thought he was seeing a vision. Now when they had passed the first and second guard, they came to the iron gate that leads into the city, which opened for them by itself; and they went out and went along one street, and immediately the angel departed from him.
 
-> And when he realized this, he went to the house of Mary, the mother of John, who was also called Mark, where many were gathered together and were praying.
-When he knocked at the door of the gate, a slave girl named Rhoda came to answer. When she recognized Peter’s voice, because of her joy she did not open the gate, but ran in and announced that Peter was standing in front of the gate. They said to her, “You are out of your mind!” But she kept insisting that it was so. They said, “It is his angel.” But Peter continued knocking; and when they had opened the door, they saw him and were amazed. But motioning to them with his hand to be silent, he described to them how the Lord had led him out of the prison. And he said, “Report these things to James and the brothers.” Then he left and went to another place.
+> When Peter came to himself, he said, “Now I know for sure that the Lord has sent forth His angel and rescued me from the hand of Herod and from all that the Jewish people were expecting.” And when he realized this, he went to the house of Mary, the mother of John, who was also called Mark, where many were gathered together and were praying. When he knocked at the door of the gate, a slave girl named Rhoda came to answer. When she recognized Peter’s voice, because of her joy she did not open the gate, but ran in and announced that Peter was standing in front of the gate. They said to her, “You are out of your mind!” But she kept insisting that it was so. They said, “It is his angel.” But Peter continued knocking; and when they had opened the door, they saw him and were amazed. But motioning to them with his hand to be silent, he described to them how the Lord had led him out of the prison. And he said, “Report these things to James and the brothers.” Then he left and went to another place.
 
 [Acts 12.1-17 NASB](https://www.crosswire.org/study/parallelstudy.jsp?key=Acts+12%3A1#cv)
 
