tweak Bible code

--- a/content/posts/2023-06-08.md
+++ b/content/posts/2023-06-08.md
@@ -29,7 +29,7 @@ What does the reading from Acts have to do with any of this? Years ago I was rea
 
 This is about the last place we hear of Peter in Acts because the rest of Luke's book focuses on Paul. Where did Peter go and why aren't we given more information? Karen Jobes thinks it's because Luke is protecting him and purposely not saying where he is.
 
-When you think about it, the preceding account of Peter being sprung from jail by the Lord's angel has all of the hallmarks of an eye witness account. There are things that you wouldn't write down unless that's the way it actually happened, like Rhoda running off to tell the others -- without letting Peter in -- and the people who had been praying for his release not believing that Peter was there. How would Luke have known this stuff? One explanation is that he was sitting across from Peter, writing down his words as he told the story. Where did Peter go? Luke knew exactly where, but didn't want to write it down in case someone got hold of his book and managed to trace Peter through it.
+When you think about it, the preceding text about Peter being sprung from jail by the Lord's angel has all of the hallmarks of an eye witness account. There are things that you wouldn't write down unless that's the way it actually happened, like Rhoda running off to tell the others -- without letting Peter in -- and the people who had been praying for his release not believing that Peter was there. How would Luke have known this stuff? One explanation is that he was sitting across from Peter, writing down his words as he told the story. Where did Peter go? Luke knew exactly where, but didn't want to write it down in case someone got hold of his book and managed to trace Peter through it.
 
 All this sounds a bit fantastic doesn't it? Well, Peter *was* on the run from Herod, the duly appointed Roman ruler. It was increasingly dangerous to be a leader of the early Christian movement. Herod had already done away with the Apostle James -- John's brother -- and saw how much it pleased the crowd. Herod was planning to do the same thing to Peter when the Lord's angel broke him out of jail.
 
